--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,74 @@
+html {
+  height: 100%;
+  min-width: 100%;
+}
+body {
+  margin: 0;
+  padding: 0px;
+  font-family: "Hind";
+  background: #eee;
+}
+
 body * {
   transition: background-size 1s ease-in-out;
 }
+
+header {
+  height: 500px;
+  position: relative;
+  background: url("https://a.cdn-hotels.com/gdcs/production25/d1902/53b16d97-cc81-40cc-ad3b-1497d887b298.jpg") center;
+  background-size: 100%;
+}
+
+header div {
+  margin-left: 10%;
+  width: 60%;
+}
+
+header div h1 {
+  font-size: 6rem;
+  line-height: 6rem;
+  margin: 0px;
+  padding-top: 70px;
+ 
+}
+
+header div p {
+  width: 40%;
+ 
+}
+nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  background: #fff;
+  justify-content: space-between;
+  color: #111;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0px 10px;
+  margin: 10px 0px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #111;
+  text-transform: lowercase;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+nav ul:first-of-type li:first-of-type{
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
 
 .posts {
   padding-top: 30px;
@@ -40,34 +108,136 @@ body * {
   text-align: right;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  width: 100%;
+
+.single {
+  width: 50%;
   margin: 0 auto;
-  background: #fff;
-  justify-content: space-between;
-  color: #111;
+  padding-bottom: 100px;
 }
 
-nav ul {
-  list-style: none;
-  padding: 0px 10px;
-  margin: 10px 0px;
+.single > img {
+  width: 100%;
 }
 
-nav ul li a {
-  text-decoration: none;
-  color: #111;
-  text-transform: lowercase;
+.process {
+  display: block;
+  color: rgb(3, 190, 150);
+  font-size: 3rem;
 }
 
-nav ul li {
-  display: inline-block;
-  margin-left: 10px;
+
+form {
+  width: 60%;
+  margin: 0 auto;
+  max-width: 900px;
+ 
 }
 
-nav ul:first-of-type li:first-of-type{
-  font-weight: bold;
-  font-size: 1.1rem;
+form * {
+  width: 100%;
+  padding: 10px 0px;
+  border: none;
+  display: block;
 }
+
+.editForm{
+  width: 100%;
+}
+
+.edit, .delete, .logout {
+  background: none;
+  padding: 10px;
+  border: none;
+ 
+}
+
+.edit {
+  border: 1px solid #222;
+  color: #222;
+  margin-top: 40px;
+}
+
+.logout {
+  border: 1px solid #222;
+  color: #222;
+}
+
+ .delete {
+  background:rgb(250, 60, 60);
+  color: #eee; 
+  margin-top: 120px;
+ }
+
+ .processing {
+  width: 40%;
+  margin: 120px auto;
+  text-align: center;
+}
+
+ .loader,
+ .loader:before,
+ .loader:after {
+   border-radius: 50%;
+ }
+ .loader {
+   color: rgb(248, 6, 6);
+   font-size: 11px;
+   text-indent: -99999em;
+   margin: 55px auto;
+   position: relative;
+   width: 10em;
+   height: 10em;
+   box-shadow: inset 0 0 0 1em;
+   -webkit-transform: translateZ(0);
+   -ms-transform: translateZ(0);
+   transform: translateZ(0);
+ }
+ .loader:before,
+ .loader:after {
+   position: absolute;
+   content: '';
+ }
+ .loader:before {
+   width: 5.2em;
+   height: 10.2em;
+   background: #eee;
+   border-radius: 10.2em 0 0 10.2em;
+   top: -0.1em;
+   left: -0.1em;
+   -webkit-transform-origin: 5.2em 5.1em;
+   transform-origin: 5.2em 5.1em;
+   -webkit-animation: load2 2s infinite ease 1.5s;
+   animation: load2 2s infinite ease 1.5s;
+ }
+ .loader:after {
+   width: 5.2em;
+   height: 10.2em;
+   background: #eee;
+   border-radius: 0 10.2em 10.2em 0;
+   top: -0.1em;
+   left: 5.1em;
+   -webkit-transform-origin: 0px 5.1em;
+   transform-origin: 0px 5.1em;
+   -webkit-animation: load2 2s infinite ease;
+   animation: load2 2s infinite ease;
+ }
+ @-webkit-keyframes load2 {
+   0% {
+     -webkit-transform: rotate(0deg);
+     transform: rotate(0deg);
+   }
+   100% {
+     -webkit-transform: rotate(360deg);
+     transform: rotate(360deg);
+   }
+ }
+ @keyframes load2 {
+   0% {
+     -webkit-transform: rotate(0deg);
+     transform: rotate(0deg);
+   }
+   100% {
+     -webkit-transform: rotate(360deg);
+     transform: rotate(360deg);
+   }
+ }
