--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   padding: 0px;
-  font-family: "Hind";
+  font-family: fantasy ;
   background: #eee;
 }
 
@@ -66,10 +66,17 @@ nav ul li {
 
 nav ul:first-of-type li:first-of-type{
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 2rem;
 }
-
-
+.formSearch{
+  margin-top: 10px;
+  text-align: center;
+  width: 15%; 
+  font-size: 18px;
+}
+.search{
+  text-align: center;
+}
 .posts {
   padding-top: 30px;
   padding-bottom: 80px ;
