--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ nav ul:first-of-type li:first-of-type{
   width: 50%;
   margin: 0 auto;
   padding-bottom: 100px;
+  text-align: center;
 }
 
 .single > img {
